_sass/_base.scss
:root {
  --color-primary-25: #EFF6F7;
  --color-primary-50: #DEE9EE;
  --color-primary-100: #C6D4DE;
  --color-primary-200: #A7B6C9;
  --color-primary-300: #8896B3;
  --color-primary-400: #6B7299;
  --color-primary-500: #4F517C;
  --color-primary-600: #3D3B66;
  --color-primary-700: #332D54;
  --color-primary-800: #2B2246;
  --color-primary-900: #261B3B;

  --color-secondary-25: #FCF4FB;
  --color-secondary-50: #FDE9FA;
  --color-secondary-100: #FDD8F8;
  --color-secondary-200: #F8BCF2;
  --color-secondary-300: #F0A1EA;
  --color-secondary-400: #E388DE;
  --color-secondary-500: #CC72CB;
  --color-secondary-600: #AC5CAE;
  --color-secondary-700: #854789;
  --color-secondary-800: #5A305F;
  --color-secondary-900: #2F1A33;

  --color-primary: var(--color-primary-400);
  --color-light: var(--color-primary-50);
  --color-bg-light: var(--color-primary-25);
  --color-bg-medium: var(--color-primary-400);
  --color-bg-dark: var(--color-primary-800);
}

.is-justify-content-center {
  justify-content: center;
}

body {
  background-color: var(--color-bg-light);
}

a {
  color: var(--color-primary);  
}

a:hover,
a.navbar-item:hover {
  outline-style: none;
  background-color: transparent;
  text-decoration: underline;
  text-underline-offset: 3px;
  color: var(--color-primary);
  text-decoration-color: var(--color-primary);
}

a:focus {
  color: var(--color-light);
  outline-style: none;
  background-color: var(--color-primary);
}

.container {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.card {
  border-radius: 0.25em;
}

@media screen and (max-width: 768px) {
  .container {
    padding-left: 1em;
    padding-right: 1em;
  }
}

.header {
  background-color: var(--color-bg-medium);
  color: var(--color-light);

  a {
    color: var(--color-light);

    &:hover {
      color: #fff;
    }
  }
}

main a,
#atendimento .icon {
  color: var(--color-primary);
}

main a {
  text-underline-offset: 3px;
  text-decoration-color: var(--color-primary);
}

@media screen and (min-width: 769px) {
  aside.column {
    margin-top: -25em;
    max-height: 700px;
  }
}

.personal,
.h-adr {
  font-size: 0.8em;
  line-height: 1.618em;
}

.personal {
  margin-bottom: 1em;
}

.button:hover {
  text-decoration: none;
}

.text-hide {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

.logo-container {
  max-width: 350px;
  margin: 0 auto 1em auto;
}

.logo {
  background-image: url("/assets/images/logo.svg");
  width: 100%;
  height: 0;
  padding-top: 50%;
}

.hospital {
  margin-bottom: 2em;
}

.link-consultas {
  display: inline-block;
}

.indent {
  margin-left: 29px;
}

#especialidades {
  background-color: var(--color-primary-50);
}

footer {
  background-color: var(--color-bg-medium);

  .social-icons a {
    margin-left: 1em;

    &:first-child {
      margin-left: 0;
    }
  }

  a {
    color: var(--color-light);

    &:hover, &:visited {
      color: #FFF;
      text-decoration: none;

      img {
        filter: invert(0%) sepia(27%) saturate(221%) hue-rotate(278deg) brightness(107%) contrast(102%);
      }
    }
  }
}

